feat: Update OpenAPI specification
- Add new combined spec YAML file that uses $ref
- Validate the new spec YAML and remove unused lines
- Add V1 and V2 qualifiers to model component schemas, tags
- Make corresponding source changes
- Change sense of feature flags (so default value of false is safe)
- Add `@ConfigurationProperties` class `FeatureProperties` for future flags
- Rename some method parameters to improve readability or clarity

references: DSTEW-60
